<resources>
    <string name="app_name">Muganga</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_next">Next</string>
    <string name="title_activity_sub">SubActivity</string>
    <string name="sub_title">SubActivity contents</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>


    <!--FOR TABS-->
    <string-array name="tabs">
        <item> Home</item>
        <item> Info </item>
        <item> Find</item>
        <item> Ask</item>
    </string-array>

    <!--FOR DRAWER-->
    <string-array name="drawerItems">
        <item>Home</item>
        <item>Settings</item>
        <item> @string/about</item>

    </string-array>

    <!--<ERROR STRINGS>-->
    <string name="error_timeout">Your Connection Timed Out. Please check your network connections.</string>
    <string name="error_auth_failure">Sorry. There is an authentication error here.</string>
    <string name="error_network"> Server Not Responding properly</string>
    <string name="error_parser">Data Received Was Unreadable</string>


    <string name="title_activity_vector_drawable">VectorDrawableActivity</string>
    <string name="new_release_fragment_text">This is the New Release fragment</string>
    <string name="loading">Loading Awesomeness�</string>


    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="title_activity_signing">SigningActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="app_desc">
     According to PWC, over three million lives are lost yearly across Africa as a result of HIV/AIDS, tuberculosis (TB), malaria and pregnancy-related conditions.</string>
    <string name="title_activity_movie_detail">Movie Poster</string>
    <string name="action_share">Share</string>


    <string name="about">About this App</string>
    <string name="about_text">This application gets movie information from a "Myfilms" API. Movies are classified as Top, Bottom, in theatres and Coming soon. Upon launching the app, the app displays the Movies screen with �intheaters�
movies. Tabs allow for other movies� option selection.
When a user selects a movie, he is given options to watch the trailer (if signed in or prompted to sign in), to see full synopsis or view full movie  (of course this feature is not fully implemented, there are copy rights involved that the app developer needs to have for this to work.). </string>


    <string name="action_refresh">Refresh</string>


    <string name="up">Up</string>
    <string name="action_sort_title">Sort by Title</string>
    <string name="action_sort_date">Sort by Date</string>
    <string name="action_sort_author">Sort by author</string>
    <string name="full_movie">Full Movie</string>
    <string name="full_synopsis">Full Synopsis</string>
    <string name="view_trailer">View Trailer</string>
    <string name="title_activity_video_player">VideoPlayerActivity</string>
    <string name="action_search">Doctors, hospitals, pharmacies and more</string>
    <string name="title_activity_movie_search">Movie Search</string>
    <string name="action_sort_rating">Sort by rating</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_out_button_text">Sign out button</string>
    <string name="revoke_access">Revoke </string>
    <string name="sign_in_status">Sign in status</string>
    <string name="admob_banner_text">AdMob banner</string>
    <string name="movie_synopsis">Movie Synospis</string>
    <string name="movie_byline">Movie Byline</string>
    <string name="movie_tile">Movie title</string>
    <string name="movie_thumbnail">Movie Thumbnail</string>
    <string name="rating_bar">Rating bar</string>
    <string name="release_date_text">Release date</string>
    <string name="loading_movie">No results found. Please try another search.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_transition">TransitionActivity</string>
    <string name="title_activity_detail">Movie Poster</string>
    <string name="action_transition">Show Animation</string>

    <string name="transition_string">transition</string>
    <string name="full_details">More Details</string>
    <string name="loading_new_movies">No results found!</string>
    <string name="progess_bar_text">Progress bar</string>
    <string name="title_movie_detail">Move Detail</string>
    <string name="view_home">Home</string>
    <string name="transition2">transition2</string>
    <string name="ask_access">Ask Doctor</string>
    <string name="find_button_text">Find a Center</string>
    <string name="map_button_text">Maps</string>
    <string name="email_access">Email</string>
    <string name="call_button_text">Call Us</string>
    <string name="sms_button_text">SMS</string>
    <string name="title_activity_maps">Map</string>
    <string name="send_to">Send to</string>
    <string name="title_activity_user_location">UserLocationActivity</string>
    <string name="service_not_available">service not available</string>
    <string name="invalid_lat_long_used">invalid coordinates used</string>
    <string name="no_address_found">No address found</string>
    <string name="address_found">Address found</string>
    <string name="title_activity_find">Find Centres</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="no_geocoder_available">No geocoder available</string>
    <string name="title_activity_firebase">FirebaseActivity</string>
    <string name="title_activity_sign_in">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_in">Sin in</string>
    <string name="fresh_config">Fresh Config</string>
    <string name="invite_menu_label">Invite Menu</string>
    <string name="cause_crash">Cause Crash</string>
    <string name="invitation_title">Invitation title</string>
    <string name="invitation_message">Invitation message</string>
    <string name="invitation_cta">Invitation cta</string>
    <string name="title_activity_locations">LocationsActivity</string>
</resources>
