<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context=".fragments.ConnectFragment">
    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="2dip">
    <LinearLayout
        android:id="@+id/signing_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dip">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dip"
            android:contentDescription="@string/common_signin_button_text"
            android:enabled="false" />

        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/sign_out_button_text"
            android:enabled="true"
            android:text="@string/sign_out" />

        <Button
            android:id="@+id/revoke_access_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/revoke_access"
            android:enabled="false"
            android:text="@string/revoke_access" />

    </LinearLayout>
        <TextView
            android:id="@+id/sign_in_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signing_layout"
            android:layout_marginBottom="30dip"
            android:contentDescription="@string/sign_in_status"
            android:text="" />

    <LinearLayout
        android:id="@+id/contact_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dip">

        <Button
            android:id="@+id/sms_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dip"
            android:contentDescription="@string/sms_button_text"
            android:enabled="true"
            android:text="@string/sms_button_text"/>

        <Button
            android:id="@+id/call_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/call_button_text"
            android:enabled="true"
            android:text="@string/call_button_text" />

        <Button
            android:id="@+id/email_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/revoke_access"
            android:enabled="true"
            android:text="@string/email_access" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/interact_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dip">

        <Button
            android:id="@+id/map_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dip"
            android:contentDescription="@string/map_button_text"
            android:enabled="true"
            android:text="@string/map_button_text"/>

        <Button
            android:id="@+id/find_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/find_button_text"
            android:enabled="true"
            android:text="@string/find_button_text" />

        <Button
            android:id="@+id/ask_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/revoke_access"
            android:enabled="true"
            android:text="@string/ask_access" />

    </LinearLayout>

    </LinearLayout>



    <TextView
        android:id="@+id/app_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:contentDescription="@string/app_desc"
        android:text="@string/app_desc"
        android:layout_below="@+id/buttons_layout"
        android:layout_alignLeft="@+id/adView"
        android:layout_alignStart="@+id/adView" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/admob_banner_text"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        android:visibility="invisible"/>


</RelativeLayout>
