<org.muganga.utilities.DrawInsetsFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/draw_insets_frame_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <org.muganga.utilities.ObservableScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:id="@+id/progressbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ProgressBar
                    style="@android:style/Widget.ProgressBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loading_movie" />
            </LinearLayout>

            <android.support.v4.view.ViewPager
                android:id="@+id/detail_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


            <FrameLayout
                android:id="@+id/photo_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primaryColorDark">
                <!--suppress AndroidLintContentDescription -->
                <ImageView
                    android:id="@+id/movieThumbnail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/movie_thumbnail" />



            </FrameLayout>

            <org.muganga.utilities.MaxWidthLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/detail_card_top_margin"
                android:background="#fff"
                android:elevation="2dp"
                android:maxWidth="@dimen/detail_card_max_width"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/meta_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="@dimen/detail_metabar_vert_padding"
                    android:background="@color/grey"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/detail_metabar_vert_padding"
                    android:paddingEnd="@dimen/detail_inner_horiz_margin"
                    android:paddingLeft="@dimen/detail_inner_horiz_margin"
                    android:paddingRight="@dimen/detail_inner_horiz_margin"
                    android:paddingStart="@dimen/detail_inner_horiz_margin"
                    android:paddingTop="@dimen/detail_metabar_vert_padding">

                    <TextView
                        android:id="@+id/movie_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/movie_tile"
                        android:fontFamily="sans-serif-condensed"
                        android:lineSpacingMultiplier="0.9"
                        android:paddingBottom="@dimen/detail_metabar_title_bottom_padding"
                        android:textAppearance="@android:style/TextAppearance.WindowTitle"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/detail_title_text_size"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/movie_byline"
                        style="?android:attr/textAppearanceSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/movie_byline"
                        android:textColor="@color/secondary_text" />
                </LinearLayout>

                <TextView
                    android:id="@+id/movie_synopsis"
                    style="?android:attr/textAppearanceMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/detail_inner_horiz_margin"
                    android:layout_marginLeft="@dimen/detail_inner_horiz_margin"
                    android:layout_marginRight="@dimen/detail_inner_horiz_margin"
                    android:layout_marginStart="@dimen/detail_inner_horiz_margin"
                    android:contentDescription="@string/movie_synopsis"
                    android:lineSpacingMultiplier="@fraction/detail_body_line_spacing_multiplier"

                    android:paddingBottom="@dimen/detail_body_bottom_margin"
                    android:textColor="@color/black"
                    android:textColorLink="@color/accentColor"
                    android:textSize="@dimen/detail_body_text_size" />



                <LinearLayout
                    android:id="@+id/butto_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="2dip"
                    >
                    <Button
                        android:id="@+id/view_trailer_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/view_trailer"
                        android:text="@string/view_trailer"
                        />

                    <Button
                        android:id="@+id/full_synopsis_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/full_synopsis"
                        android:text="@string/full_synopsis"
                        />

                    <Button
                        android:id="@+id/full_movie_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/full_movie"
                        android:text="@string/full_movie"
                        />

                </LinearLayout>

            </org.muganga.utilities.MaxWidthLinearLayout>
        </FrameLayout>
    </org.muganga.utilities.ObservableScrollView>

    <ImageButton android:id="@+id/share_fab"

        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:background="@drawable/add_fab_background"
        android:contentDescription="@string/action_share"
        android:elevation="@dimen/fab_elevation"
        android:src="@drawable/ic_share" />

</org.muganga.utilities.DrawInsetsFrameLayout>
