<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?selectableItemBackground">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/custom_movie_theaters"
        android:paddingBottom="@dimen/size_byte"
        android:paddingEnd="@dimen/size_word"
        android:paddingLeft="@dimen/size_word"
        android:paddingRight="@dimen/size_word"
        android:paddingStart="@dimen/size_word"
        android:paddingTop="@dimen/size_byte">


        <ImageView
            android:id="@+id/movieThumbnail"
            android:layout_width="@dimen/movie_thumbnail_width"
            android:layout_height="@dimen/movie_thumbnail_height"
            android:layout_centerVertical="true"
            android:contentDescription="@string/movie_thumbnail"
            android:transitionName="@string/action_transition" />

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/movieThumbnail"
            android:layout_marginLeft="56dp"
            android:alpha="0.87"
            android:contentDescription="@string/movie_tile"
            android:gravity="right"
            android:padding="@dimen/size_half_byte"
            android:textSize="@dimen/size_text_primary" />

        <TextView
            android:id="@+id/movieReleaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/movie_title"
            android:alpha="0.87"
            android:contentDescription="@string/release_date_text"
            android:padding="@dimen/size_half_byte"
            android:textSize="@dimen/size_text_secondary" />

        <TextView
            android:id="@+id/details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/movieReleaseDate"
            android:alpha="0.87"
            android:contentDescription="@string/release_date_text"
            android:padding="@dimen/size_half_byte"
            android:textSize="@dimen/size_text_secondary" />
    </RelativeLayout>
</android.support.v7.widget.CardView>