<tools:org.muganga.utilities.DrawInsetsFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/draw_insets_frame_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.muganga.activities.DetailActivity">


    <android.support.design.widget.AppBarLayout

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/up_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Toolbar"
        app:elevation="4dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_gravity="bottom"
            android:layout_marginEnd="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginStart="0dp"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>


    <org.muganga.utilities.ObservableScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <FrameLayout
            android:id="@+id/detail_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/photo_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primaryColorDark">
                <!--suppress AndroidLintContentDescription -->
                <ImageView
                    android:id="@+id/movieThumbnail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:clickable="true"
                    android:contentDescription="@string/movie_thumbnail"
                    android:src="@drawable/android_icon"
                    android:transitionName="@string/transition_string" />


            </FrameLayout>

            <org.muganga.utilities.MaxWidthLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/detail_card_top_margin"
                android:background="#fff"
                android:elevation="2dp"
                android:maxWidth="@dimen/detail_card_max_width"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/meta_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="@dimen/detail_metabar_vert_padding"
                    android:background="@color/grey"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/detail_metabar_vert_padding"
                    android:paddingEnd="@dimen/detail_inner_horiz_margin"
                    android:paddingLeft="@dimen/detail_inner_horiz_margin"
                    android:paddingRight="@dimen/detail_inner_horiz_margin"
                    android:paddingStart="@dimen/detail_inner_horiz_margin"
                    android:paddingTop="@dimen/detail_metabar_vert_padding"
                    android:transitionName="@string/transition2">

                    <TextView
                        android:id="@+id/movie_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/movie_tile"
                        android:fontFamily="sans-serif-condensed"
                        android:lineSpacingMultiplier="0.9"
                        android:paddingBottom="@dimen/detail_metabar_title_bottom_padding"
                        android:textAppearance="@android:style/TextAppearance.WindowTitle"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/detail_title_text_size"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/movie_byline"
                        style="?android:attr/textAppearanceSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/movie_byline"
                        android:textColor="@color/secondary_text" />
                </LinearLayout>

                <TextView
                    android:id="@+id/movie_synopsis"
                    style="?android:attr/textAppearanceMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/detail_inner_horiz_margin"
                    android:layout_marginLeft="@dimen/detail_inner_horiz_margin"
                    android:layout_marginRight="@dimen/detail_inner_horiz_margin"
                    android:layout_marginStart="@dimen/detail_inner_horiz_margin"
                    android:contentDescription="@string/movie_synopsis"
                    android:lineSpacingMultiplier="@fraction/detail_body_line_spacing_multiplier"

                    android:paddingBottom="@dimen/detail_body_bottom_margin"
                    android:textColor="@color/black"
                    android:textColorLink="@color/accentColor"
                    android:textSize="@dimen/detail_body_text_size" />


                <LinearLayout
                    android:id="@+id/butto_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="2dip">

                    <Button
                        android:id="@+id/view_trailer_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/view_trailer"
                        android:text="@string/view_trailer" />


                    <Button
                        android:id="@+id/view_home_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/view_home"
                        android:text="@string/view_home" />


                </LinearLayout>

            </org.muganga.utilities.MaxWidthLinearLayout>
        </FrameLayout>
    </org.muganga.utilities.ObservableScrollView>


</tools:org.muganga.utilities.DrawInsetsFrameLayout>
